--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 # Public Environment Variables
 NEXT_PUBLIC_CURRENCY=$
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=''
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cG9zc2libGUtY2l2ZXQtMzQuY2xlcmsuYWNjb3VudHMuZGV2JA
 
 # Private Environment Variables
-CLERK_SECRET_KEY=''
-MONGODB_URI=''
+CLERK_SECRET_KEY=sk_test_tNuYP2a48puX2QWBNnVEBboTH0lB5NFUuqoVIhFDTr
+MONGODB_URI='mongodb+srv://cyberglich57:Easy2024@cluster0.opmdxxw.mongodb.net'
 INNGEST_SIGNING_KEY=''
 INNGEST_EVENT_KEY=''
 # Cloudinary
